# pather

./: .gitignore  README.md  pyproject.toml
pather/: appdata.py  cli.py  script.py
tests/: test_pather.py
