[tool.poetry]
name = "pather"
version = "0.1.0"
description = ""
authors = ["mmatlin <33261504+mmatlin@users.noreply.github.com>", "dmatlin16 <33286795+dmatlin16@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
black = "^20.8b1"
rope = "^0.18.0"

[tool.poetry.scripts]
pather = "pather.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
